--- a/About me.html
+++ b/About me.html
@@ -3,110 +3,170 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About Me</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About - Prasit's Profile</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
    
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prasit'Profile</title>
+    <section class="about">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <h1 class="heading"> about <span>me</span> </h1>
 
-    <link rel="stylesheet" href="css/style.css">
-  
-<table style="width:100%; text-align: center"></table>
-<hr> 
-    <h1 style="text-align: center; font-family: cursive;">My name</h1>
-    <h2>My name : prasit yoksour</h2>
-    <h3>Age : 23</h3>
-    <h4>email : prasit.yoks@bumail.NET</h4>    
-    <h2 style="text-align: center; font-family: cursive;">My Skills</h2> 
-    <!-- Reference: Aclonica Font -->
-    <link href='https://fonts.googleapis.com/css?family=Aclonica'rel='stylesheet'> 
-    <h2 style="text-align: center;">Skills</h2> 
-    <table style="margin-left: auto; margin-right: auto" cellspacing="30"> <!--- border="1">-->
-        <tr>
-            <td>
-                <table>
-                    <tr>
-                        <td>HTML</td>
-                        <!--Emoji Windows: WIN+. or WIN+; | MAC: ^+Command+space-->
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>      
-                    <tr>
-                        <td>Photography</td>
-                        <td>⭐⭐⭐⭐</td>
-                    </tr>    
-                </table>               
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>Node.js</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>SQL</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>NoSql</td>
-                        <td>⭐⭐⭐⭐</td>
-                    </tr>      
-                    <tr>
-                        <td>Computer Graphics</td>
-                        <td>⭐⭐⭐</td>
-                    </tr>    
-                </table>   
-            </td>
-        </tr>
-    </table>
-</body>
-<hr> 
-    <h1 style="text-align: center; font-family: cursive;">Experiences</h1> 
-    <!-- Reference: Aclonica Font -->
-    <link href='https://fonts.googleapis.com/css?family=Aclonica'rel='stylesheet'> 
-    <table style="margin-left: auto; margin-right: auto">
-        <tbody>
-            <tr>
-              <td>
-                <h2>Teaching Experiences</h2>
-                <ul type="circle">
-                    <li>Multimedia Programming</li>
-                    <li>Advanced SQL</li>
-                    <li>.NET Programming</li>
-                </ul>
-                <h2>Certificate</h2>
-                <ul type="disc">
-                    <li>IBM Full Stack Software Developer Professional</li>
-                    <li>Google Data Analytics Professional</li>
-                    <li>DevOps on AWS Specialization</li>
-                    <li>SQL Advanced</li>
-                </ul>
-                <h2>Research Interests</h2>
-                <ol>
-                    <li>Big Data</li>
-                    <li>Data Visualization</li>
-                    <li>Artificial Intelligence and Data Science</li>
-                </ol>                
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="row">
+
+            <div class="info-container">
+
+                <h1>personal info</h1>
+
+                <div class="box-container">
+
+                    <div class="box">
+                        <h3> <span>name : </span> Prasit yoksoun </h3>
+                        <h3> <span>age : </span> 23 </h3>
+                        <h3> <span>email : </span> prasit.yoks@bu.ac.th </h3>
+                        <h3> <span>address : </span> samut prakan, Thailand 10280 </h3>
+                    </div>
+
+                    <div class="box">
+                        <h3> <span>freelance : </span> available </h3>
+                        <h3> <span>skill : </span> Full Stack Engineer </h3>
+                        <h3> <span>experience : </span> 5 years </h3>
+                        <h3> <span>language : </span> thai </h3>
+                    </div>
+
+                </div>
+
+                <a href="/profilewithcss/files/resume.pdf" class="btn"> download CV <i class="fas fa-download"></i> </a>
+
+            </div>
+
+            <div class="count-container">
+
+                <div class="box">
+                    <h3>5+</h3>
+                    <p>years of experience</p>
+                </div>
+
+                <div class="box">
+                    <h3>10+</h3>
+                    <p>happy clients</p>
+                </div>
+
+                <div class="box">
+                    <h3>20+</h3>
+                    <p>project completed</p>
+                </div>
+
+                <div class="box">
+                    <h3>5+</h3>
+                    <p>Certificates</p>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 
 
-    
+
+    <section class="skills">
+
+        <h1 class="heading"> <span>my</span> skills </h1>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="images/icon-1.png">
+                <h3>html</h3>
+            </div>
+            <div class="box">
+                <img src="images/icon-2.png">
+                <h3>css</h3>
+            </div>
+            <div class="box">
+                <img src="images/icon-3.png">
+                <h3>javascript</h3>
+            </div>
+            <div class="box">
+                <img src="images/icon-4.png">
+                <h3>sass</h3>
+            </div>
+            <div class="box">
+                <img src="images/icon-5.png">
+                <h3>angular</h3>
+            </div>
+            <div class="box">
+                <img src="images/icon-6.png">
+                <h3>react.js</h3>
+            </div>
+        </div>
+
+    </section>
+
+
+    <section class="education">
+
+        <h1 class="heading"> <span>my</span> experience </h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <i class="fas fa-briefcase"></i>
+                <span>2016 - 2017</span>
+                <h3>INTER EXPRESS LOGISTICS PRIVATE LIMITED</h3>
+                <p>Assist the system analyst in conduct analysis, architecture, design database model for the new
+                    application.</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-briefcase"></i>
+                <span>2017 - 2018</span>
+                <h3>PTT Digital Solutions Company Limited</h3>
+                <p>Front-end coding to develop web applications follows by mock-up screen design. And back-end coding
+                    and test to configuration workflows and business processes.</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-briefcase"></i>
+                <span>2018 - 2018</span>
+                <h3>Thai Beverage PLC</h3>
+                <p>Develop new features to facilitate related procedures and tools if necessary, Troubleshoot, test, and
+                    maintain the core product software and databases to ensure strong optimization and functionality.
+                </p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-briefcase"></i>
+                <span>2019 - 2020</span>
+                <h3>Cigna</h3>
+                <p>Assist the system analyst in conduct analysis, architecture, design database model for the new
+                    application.</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-briefcase"></i>
+                <span>2019 - 2020</span>
+                <h3>EMETWORKS</h3>
+                <p>Develop new features to facilitate related procedures and tools if necessary.</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-briefcase"></i>
+                <span>2020 - 2021</span>
+                <h3>uTech Solutions</h3>
+                <p>Assist the system analyst in conduct analysis, architecture, design database model for the new
+                    application.</p>
+            </div>
+
+        </div>
+
+    </section>
+ 
 </body>
 
 </html>
