--- a/About me.html
+++ b/About me.html
@@ -6,13 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Prasit's Profile</title>
+
+    <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
-   
+
+    <!-- navbar section starts  -->
+
+    <nav class="navbar">
+        <a href="index.html"> <i class="fas fa-user"></i> <span>profile</span> </a>
+        <a href="about.html" class="active"> <i class="fas fa-address-card"></i> <span>about</span> </a>
+        <a href="projects.html"> <i class="fas fa-briefcase"></i> <span>projects</span> </a>
+        <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
+    </nav>
+
+    <!-- navbar section ends -->
+
+    <!-- about section starts  -->
+
     <section class="about">
 
         <h1 class="heading"> about <span>me</span> </h1>
@@ -27,15 +44,15 @@
 
                     <div class="box">
                         <h3> <span>name : </span> Prasit yoksoun </h3>
-                        <h3> <span>age : </span> 23 </h3>
-                        <h3> <span>email : </span> prasit.yoks@bu.ac.th </h3>
-                        <h3> <span>address : </span> samut prakan, Thailand 10280 </h3>
+                        <h3> <span>age : </span> 29 </h3>
+                        <h3> <span>email : </span> Prasit@bumail.NET </h3>
+                        <h3> <span>address : </span> samut prakan, Thailand 102800 </h3>
                     </div>
 
                     <div class="box">
                         <h3> <span>freelance : </span> available </h3>
                         <h3> <span>skill : </span> Full Stack Engineer </h3>
-                        <h3> <span>experience : </span> 5 years </h3>
+                        <h3> <span>experience : </span> 6 years </h3>
                         <h3> <span>language : </span> thai </h3>
                     </div>
 
@@ -73,7 +90,9 @@
 
     </section>
 
+    <!-- about section ends -->
 
+    <!-- skills section starts  -->
 
     <section class="skills">
 
@@ -108,6 +127,9 @@
 
     </section>
 
+    <!-- skills section ends -->
+
+    <!-- education section starts  -->
 
     <section class="education">
 
@@ -166,7 +188,9 @@
         </div>
 
     </section>
- 
+
+    <!-- education section ends -->
+
 </body>
 
 </html>
